# Ceeify

./: .gitignore  CMakeLists.txt  Ceeify.sln  Ceeify.vcxproj  Ceeify.vcxproj.filters  Node_linkedlist.c  Node_linkedlist.h  ceeify.c  lexer.c  lexer.h  parser2.c  portal.py  readme.md  resource.h  utils.c  utils.h
docs/: commands.md
include/: IRNode_arraylist.h  Node_linkedlist.h  Symbol_hashtable.h  Token_arraylist.h  arena.h  code_generator.h  ir.h  lexer.h  parser.h  stringbuilder.h  token.h  utils.h
includes/: ASTNode_linkedlist.h  allocator.h  arena.h  codegen.h  flag.h  lexer.h  parser.h  pattern_binding.h  profiler.h  semantic.h  string_builder.h  tac.h  token_arraylist.h  utils.h
scripts/: build.sh  prebuild.sh  tasks.sh  util.sh
src/: ASTNode_linkedlist.c  IRNode_arraylist.c  Node_linkedlist.c  Symbol_hashtable.c  Token_arraylist.c  ceeify.c  code_generator.c  codegen.c  ir.c  lexer.c  main.c  parser.c  profiler.c  semantic.c  string_builder.c  stringbuilder.c  tac.c  token_arraylist.c  utils.c
test/: hashtable_test.h  main_test.c  stringbuilder_test.h  test_example.c
test/output/: assign_statement.c  binary_operation_type_codegen.c  binary_operation_type_codegen_IR.ll  test_assign_codegen.c  test_assignment_serialization.json  test_bin_op_type_precedence_IRGen.ll  test_if_stmt_codegen.c  test_portal_serialization.json  test_portal_symbol_table.json  while_statement.json  while_statement_symbol_table.json
test/samples/: assign_statement.py  binary_operation_type.py  for_statement.py  if_statement.py  list.py  portal.py  while_statement.py
tests/: main.c  test_codegen.h  test_lexer.h  test_parser.h  test_semantic.h  test_tac.h
tests/mock/: aug_assign.py  budget.py  call_inside_expression.py  class_def.py  class_inheritance_def.py  compare_expression.py  data.py  expression_parentheses_override_precedence.py  func_type_error_int_str.py  function_declaration.py  if_elif.py  match_case.py  match_case_binding_twice.py  nested_function_call.py  return_function_call.py  type_mismatch.py  undefined_variable.py  while.py
